stop before i fuck too much up

--- a/src/components/button.module.css
+++ b/src/components/button.module.css
@@ -1,15 +1,15 @@
 @import '../styles/custom-properties.css';
 
 .button {
-  margin-top: 2rem;
+  margin-top: 1rem;
   font-size: 1.5rem;
   font-weight: 600;
-  width: 100%;
+  width: 70%;
   padding: 1rem;
   border-radius: 40px;
   background-color: rgba(0, 0, 0, 0);
-  color: var(--grapefruit);
-  border: 3px solid var(--grapefruit);
+  color: var(--beet);
+  border: 3px solid var(--beet);
   cursor: pointer;
   transition: 
     transform ease-in-out 100ms,
@@ -17,7 +17,7 @@
 }
 
 .button:hover {
-  background-color: var(--grapefruit);
+  background-color: var(--beet);
   color: #fff;
   outline: none;
 }
