--- a/src/components/lifestyle.module.css
+++ b/src/components/lifestyle.module.css
@@ -1,4 +1,17 @@
-.intro {
-  max-width: 515px;
-  margin: 0 auto;
+@media (max-width: 700px) {
+  .img {
+    width: calc(100% - 4rem);
+    max-width: calc(515px - 4rem);
+    margin: 0 auto;
+  }
+
+  .copy {
+    order: 2;
+  }
+}
+
+@media (min-width: 701px) {
+  .img {
+    width: calc(40% - 1rem);
+  }
 }
